testdata/golden/sema/valid/_tagged_error_type_ok.sg
// scenario: tagged union defined with explicit tag constructors
tag IoError(string);
tag ParseError(string);

type ErrorTagged = IoError | ParseError;

fn make_error(io_failed: bool) -> ErrorTagged {
    if (io_failed) {
        return IoError("io failure");
    }
    return ParseError("parse failure");
}
